--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <title>Kitten</title>
   </head>
   <body>
+    <!-- First container -->
     <div class="container-cell">
       <img src="assets/images/dawn.png" alt="dawn">
       <img src="assets/images/kitten-large.png" alt="kitten-large">      
     </div>
+    <!-- Second container -->
     <div class="container-tablet">
       <img src="assets/images/night.jpg" alt="night">
       <img src="assets/images/kitten-small.png" alt="kitten-small">
     </div>
+    <!-- Third container -->
     <div class="container-desk">
       <img src="assets/images/sunny-day.jpg" alt="sunny-day">
       <img src="assets/images/kitten-medium.png" alt="kitten-medium">
